--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ uvicorn==0.31.1
 jinja2==3.1.4
 python-multipart==0.0.12
 fastapi-cors==0.0.6
-aiogram==3.18.0
 emoji==2.14.1
 telegram
 bot
+python-telegram-bot==21.8
+aiogram==3.15.0
