--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,9 @@
-aiofiles == 24.1.0
-aiogram == 3.15.0
-aiohappyeyeballs == 2.4.4
-aiohttp == 3.10.11
-aiosignal == 1.3.1
-altgraph == 0.17.4
-annotated-types == 0.7.0
-anyio == 4.4.0
-asgiref == 3.8.1
-asyncpg == 0.29.0
-attrs == 24.2.0
-certifi == 2024.8.30
-chardet == 5.2.0
-click == 8.1.7
-colorama == 0.4.6
-cssselect2 == 0.7.0
-dj-database-url == 2.3.0
-Django == 5.1.4
-django-classy-tags == 3.0.1
-django-cms == 3.8.2
-django-filer == 3.0.3
-django-formtools == 2.4
-django-js-asset == 2.0.0
-django-mptt == 0.16.0
-django-polymorphic == 3.1.0
-django-sekizai == 3.0.1
-django-treebeard == 4.4
-djangocms-admin-style == 2.0.2
-djangocms-attributes-field == 4.0.0
-djangocms-bootstrap4 == 2.0.0
-djangocms-file == 3.0.1
-djangocms-googlemap == 2.2.0
-djangocms-icon == 2.0.0
-djangocms-installer == 2.0.0
-djangocms-link == 3.1.1
-djangocms-picture == 3.0.0
-djangocms-style == 3.1.0
-djangocms-text-ckeditor == 4.0.0
-djangocms-video == 3.1.0
-easy-thumbnails == 2.9
-emoji == 2.14.1
-fastapi == 0.112.2
-frozenlist == 1.5.0
-h11 == 0.14.0
-html5lib == 1.1
-httpcore == 1.0.7
-httptools == 0.6.1
-httpx == 0.28.0
-idna == 3.8
-Jinja2 == 3.1.4
-lxml == 5.3.0
-magic-filter == 1.0.12
-MarkupSafe == 2.1.5
-multidict == 6.1.0
-packaging == 24.1
-pefile == 2023.2.7
-pillow == 11.0.0
-pip == 24.2
-propcache == 0.2.1
-psycopg2 == 2.9.9
-pyaes == 1.6.1
-pyasn1 == 0.6.1
-pydantic == 2.8.2
-pydantic_core == 2.20.1
-pyinstaller == 6.11.0
-pyinstaller-hooks-contrib == 2024.9
-python-dotenv == 1.0.1
-python-multipart == 0.0.10
-python-telegram-bot == 21.10
-pytz == 2024.2
-pywin32-ctypes == 0.2.3
-PyYAML == 6.0.2
-reportlab == 4.2.5
-rsa == 4.9
-setuptools == 75.2.0
-six == 1.17.0
-sniffio == 1.3.1
-sqlparse == 0.5.2
-starlette == 0.38.4
-svglib == 1.5.1
-Telethon == 1.39.0
-tinycss2 == 1.4.0
-typing_extensions == 4.12.2
-tzdata == 2024.2
-tzlocal == 5.2
-uvicorn == 0.30.6
-watchfiles == 0.24.0
-webencodings == 0.5.1
-websockets == 13.0.1
-yarl == 1.18.0
+fastapi==0.115.0
+uvicorn==0.31.1
+jinja2==3.1.4
+python-multipart==0.0.12
+fastapi-cors==0.0.6
+emoji==2.14.1
+python-telegram-bot==21.8
+aiogram==3.15.0
+
