--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ python-multipart==0.0.12
 fastapi-cors==0.0.6
 emoji==2.14.1
 python-telegram-bot==21.8
-aiogram==3.18.0
-
+aiogram>=3.0.0
+python-dotenv>=0.19.0
